--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <div class="collapse navbar-collapse navbar-default" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto">          
                 <li class="nav-item">
                     <a href="#skills" class="nav-link">Skills</a>
@@ -134,9 +134,9 @@
         </div>
     </section>
     <!--skills section-->
-    <div class="skills-section" id="skills">
-        <div class="skills-header">
-            <h1 class="skills-title">Skills</h1>
+    <div class="colored-section" id="skills">
+        <div class="other-header">
+            <h1 class="other-title">Skills</h1>
             <div class="icons-container">
                 <div class="row">
                     <div class="icon-container">
@@ -192,9 +192,9 @@
         </div>
     </div>
     <!--Projects Section-->
-    <div class="projects-section" id="projects">
-        <div class="projects-header">
-            <h1 class="projects-title">Projects</h1>
+    <div id="projects">
+        <div class="other-header">
+            <h1 class="other-title">Projects</h1>
         </div>
         <div>
           <div class="row">
@@ -299,9 +299,9 @@
     </div>
 
     <!-- contact section -->
-    <div class="contact-section" id="contact">
-        <div class="contact-header">
-            <h1 class="contact-title">Contact</h1>
+    <div class="colored-section" id="contact">
+        <div class="other-header">
+            <h1 class="other-title">Contact</h1>
         </div>
         <div class="contact-container">
             <form action="/submit" method="post" class="contact-form">
@@ -322,7 +322,7 @@
                 </div>
                 <div class="contact-input" data-validate="Message is required">
                     <span class="contact-label-input">Message:</span>
-                        <textarea class="form-control" name="message" style="height: 200%;" placeholder="Your Comment..."></textarea>
+                        <textarea class="form-control" name="message" style="height: 15vw;" placeholder="Your Comment..."></textarea>
                     <span class="focus-input"></span>
                 </div>
                 <div class="submit-container">
@@ -331,7 +331,7 @@
             </form>
         </div>
     </div>
-    <footer style="background-color: #f5deb33b; padding-top: 3%;">
+    <footer style="background-color: #f5deb33b; padding-top: 3%; width: 100vw;">
         <p>Still running in {{year}}. Built with &#129505 by Me.</p>
     </footer>
 </body>
