--- a/templates/submission.html
+++ b/templates/submission.html
@@ -22,8 +22,8 @@
     <title>Marco Rodrigues</title>
 </head>
 <body>
-    <div class = "contact-header">
-        <h1 class="contact-title">Email sent</h1>
+    <div class = "other-header">
+        <h1 class="other-title">Email sent</h1>
         <div class="icon-align">
             <i class="material-symbols-outlined md-100" style="color: rgb(24, 172, 24);">check</i>
             <span class="caption-icon">Thank You for contacting!</span>
