--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,7 @@
 .navbar-dark .navbar-brand {
     color: #f5deb3;
     font-family: 'Fredoka', sans-serif;
-    font-size: 1.2vw;
+    font-size: clamp(15px, 1.7vw, 30px);
     font-weight: 800;
     padding: 0 15px;
     height: 30px;
