--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
         </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marco Rodrigues</title>
     <!-- add icon link -->
@@ -276,7 +277,7 @@
                       <img src="https://user-images.githubusercontent.com/62621924/147284141-995f4628-bd49-4e75-be52-53717efe0554.png" alt="" class="img-fluid card-img-top">
                     </a>    
                   <div class="p-4">
-                    <h5 class="title-img-gallery">Tkinter GUI to be used as a repository for plants and muchrooms.</h5>
+                    <h5 class="title-img-gallery">Tkinter GUI to be used as a repository for plants and mushrooms.</h5>
                     <p class="small text-muted mb-0">The user can easily look for species, families and properties and customize the GUI as he wants, by adding/removing species.</p>
                   </div>
                 </div>
@@ -304,7 +305,7 @@
             <h1 class="other-title">Contact</h1>
         </div>
         <div class="contact-container">
-            <form action="/submit" method="post" class="contact-form">
+            <form action="/submit" method="post" class="contact-form" accept-charset="utf-8">
                 <div class="contact-input" data-validate="Name is required">
                     <span class="contact-label-input">Full Name:</span>
                         <input class="form-control" type="text" name="name" placeholder="Enter full name">
@@ -331,7 +332,7 @@
             </form>
         </div>
     </div>
-    <footer style="background-color: #f5deb33b; padding-top: 3%; width: 100vw;">
+    <footer style="background-color: #f5deb33b; padding-top: 3%;">
         <p>Still running in {{year}}. Built with &#129505 by Me.</p>
     </footer>
 </body>
