--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+    <!--Recaptcha-->
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -29,6 +31,16 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marco Rodrigues</title>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+    {% block body %}{% endblock %}
     <!-- add icon link -->
     <link rel = "icon" href = "static/images/profile-pic.png" type = "image/x-icon" style="border-radius: 50%;">
 </head>
@@ -324,6 +336,11 @@
                 <div class="contact-input" data-validate="Message is required">
                     <span class="contact-label-input">Message:</span>
                         <textarea class="form-control" name="message" style="height: 15vw;" placeholder="Your Comment..."></textarea>
+                    <span class="focus-input"></span>
+                </div>
+                <div class="contact-input" data-validate="Message is required">
+                    <span class="contact-label-input"></span>
+                        {{recaptcha}}
                     <span class="focus-input"></span>
                 </div>
                 <div class="submit-container">
