--- a/templates/index.html
+++ b/templates/index.html
@@ -327,11 +327,11 @@
                         <textarea class="form-control" name="message" style="height: 15vw;" placeholder="Your Comment..."></textarea>
                     <span class="focus-input"></span>
                 </div>
-                <div class="contact-input" data-validate="Message is required">
+                <!-- <div class="contact-input" data-validate="Message is required">
                     <span class="contact-label-input"></span>
                         {{recaptcha}}
                     <span class="focus-input"></span>
-                </div>
+                </div> -->
                 <div class="submit-container">
                     <button class="button-1" type="submit">Submit</button>
                 </div>
