--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
                         </div>                            
                         <div class="icon-align">
                             <i class="material-symbols-outlined md-100">dvr</i>
-                            <span class="caption-icon">Web Development, CSS, HTML, Flask, Solidity</span>
+                            <span class="caption-icon">Web Development, CSS, HTML, Flask, Django</span>
                         </div>
                         <div class="icon-align">
                             <i class="material-symbols-outlined md-100">precision_manufacturing</i>
@@ -176,7 +176,7 @@
                     <h4 class="title-progress">Data Science</h4>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                        aria-valuemin="0" aria-valuemax="100" style="width:55%">
+                        aria-valuemin="0" aria-valuemax="100" style="width:60%">
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                     <h4 class="title-progress">Web Development</h4>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                        aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                        aria-valuemin="0" aria-valuemax="100" style="width:60%">
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,6 @@
                   <div class="p-4">
                     <h5 class="title-img-gallery">Using NLP on Job Descriptions</h5>
                     <p class="small text-muted mb-0">NLP models were developed in order to detect skills, knowledge, minimum experience and levels (degree) in job descriptions. </p>
-                    <a href="https://skills-matcher-best.herokuapp.com/" class="heroku">Heroku App</a>
                   </div>
                 </div>
             </div>
