maintenance: simplify to avoid deployment error

--- a/templates/index.html
+++ b/templates/index.html
@@ -297,7 +297,7 @@
             <!-- End -->   
     </div>
 
-    <!-- contact section -->
+    <!-- contact section
     <div class="colored-section" id="contact">
         <div class="other-header">
             <h1 class="other-title">Contact</h1>
@@ -334,7 +334,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div> -->
     <footer style="background-color: #f5deb33b; padding-top: 3%;">
         <p>Still running in {{year}}. Built with &#129505 by Me.</p>
     </footer>
