maintenance: simplify to avoid deployment error

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,9 @@
     <link rel = "icon" href = "static/images/profile-pic.png" type = "image/x-icon" style="border-radius: 50%;">
 </head>
 <body>
+    hey
+</body>
+<!-- <body>
     <nav class="navbar navbar-custom navbar-expand-lg bg-gray-800 navbar-dark fixed-top">
         <a href="#"><p class="navbar-brand navbar-dark font-mono">Marco Rodrigues</p></a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -295,7 +298,7 @@
                 </div>
             </div>
             <!-- End -->   
-    </div>
+    </div> -->
 
     <!-- contact section
     <div class="colored-section" id="contact">
