--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,7 +28,7 @@
 /* About */
 
 .bg-image {
-    background-image: url(../images/img-header-2.png);
+    background-image: url(../images/img-header.png);
     margin-top: 55px;
     background-position: center;
     background-size: cover;
