Change in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <div class="mask">
         <div class="d-flex h-100">
             <div class="text-white">
-                <h1 class="mb-3 h1-header">A breeze of my work...</h1>
+                <h1 class="mb-3 h1-header">A breeze of my work</h1>
                 <h4 class="mb-3 h4-header">Tales of a Software Engineer and Python Developer</h4>
             </div>
             <div class="profile-pic">
