--- a/templates/index.html
+++ b/templates/index.html
@@ -176,6 +176,20 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
+                <a href="https://medium.com/@macrodrigues/gather-data-by-creating-a-survey-app-with-flask-wtf-feb0053f7a74">
+                  <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ejZJQhNHVx5DMl4q9KJeVw.jpeg" width="30px" alt="" class="img-fluid card-img-top">
+                </a>    
+              <div class="p-4">
+                <h5 class="title-img-gallery">Gather data by creating a survey app with Flask-WTF</h5>
+                <p class="small text-muted mb-0">With Flask and Flask-WTF, you can easily build forms with the most common widgets. In this project, I pretend to build a survey to gather enough data for a market study.</p>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+        
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/global-trades-visualization-using-dash-plotly-and-flask-b528fcab1e5e">
                   <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*80pBsex_LNm_kPJuOZqf9g.png" width="30px" alt="" class="img-fluid card-img-top">
                 </a>    
