--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,10 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse navbar-default" id="navbarTogglerDemo02" style="visibility:inherit">
-        <ul class="navbar-nav ml-auto">          
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="https://www.corkforms.xyz/" class="nav-link nav-link-special">New</a>
+            </li>                      
             <li class="nav-item">
                 <a href="#skills" class="nav-link">Skills</a>
             </li>
