Update images to webp format

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,7 @@
 /* About */
 
 .bg-image {
-    background-image: url(../images/img-header.png);
+    background-image: url(../images/img-header.webp);
     margin-top: 55px;
     background-position: center;
     background-size: cover;
