--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 <h4 class="mb-3 h4-header">Tales of a Software Engineer and Python Developer</h4>
             </div>
             <div class="profile-pic">
-                <img src="static/images/profile-pic.png" alt="" style="border-radius: 50%;">
+                <img src="static/images/profile-pic.webp" alt="" style="border-radius: 50%;">
             </div>
         </div>
     </div>
